<resources>
    <string name="app_name">JOE Inventory App</string>
    <!--Drawer menu-->
    <string name="Opcion_Todas">Todas</string>
    <string name="Opcion_Ajustes">Ajustes</string>
    <string name="Opcion_Salir">Salir</string>

    <!--FAB ADD PRODUCTO-->
    <string name="FAB_AgregarProducto">Agregar</string>

    <!--Drawer Layout-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Diseño agregar password-->
    <string name="EtTitulo">Título</string>
    <string name="EtCorreoProveedor">Correo del Proveedor</string>
    <string name="EtNombreProveedor">Nombre de Proveedor</string>
    <string name="EtProducto">Producto</string>
    <string name="EtStock">Stock</string>
    <string name="EtNota">Nota</string>

    <!---Menú agregar producto-->
    <string name="Guardar_Producto">Guardar</string>



</resources>